[tool.poetry]
name = "hlm-texts"
version = "0.1.1"
description = ""
authors = ["freemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/hlm-texts"

[tool.poetry.dependencies]
python = "^3.7"
cchardet = "^2.1.7"
logzero = "^1.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
