[tool.poetry]
name = "hlm-texts"
version = "0.1.3"
description = ""
authors = ["freemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/hlm-texts"

[tool.poetry.dependencies]
python = "^3.6.1"
cchardet = "^2.1.7"
logzero = "^1.6.3"
tqdm = "^4.54.1"
polyglot = "^16.7.4"
sentence_splitter = "^1.4"
Morfessor = "^2.0.6"
halo = "^0.0.31"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pep257 = "^0.7.0"
pydocstyle = "^5.1.1"
linetimer = "^0.1.4"
streamlit = "^0.72.0"
flake8 = "^3.8.4"
sentence_transformers = "^0.3.9"
pipdeptree = "^1.0.0"
absl-py = "^0.11.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
